--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "preview": "vite preview",
     "dev": "vite",
-    "build": "tsc && vite build && npm run copy-models",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
