--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "preview": "vite preview",
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && npm run copy-models",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "download-models": "node scripts/download-model.js",
-    "copy-models": "cp -r public/models dist/models"
+    "copy-models": "cp -r public/models dist/"
   },
   "dependencies": {
     "@tensorflow-models/pose-detection": "^2.1.3",
